tring to make seperate folders for the deployment

--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
     <div id="homepage">
       <div id="container">
         <header class="homepage-header">
-          <a href="" class="name-logo header"><img src="/logo.jpg" alt="U" class="logo">Cafanier</a>
+          <a href="" class="name-logo header"><img src="/img/logo.jpg" alt="U" class="logo">Cafanier</a>
 
           <button id="cartpage-btn" class="cart header"
-          data-toggle="modal" data-target = "#cartpage"><img src="/cart.png" id="shoping_cart_img" />Cart</button
+          data-toggle="modal" data-target = "#cartpage"><img src="/img/cart.png" id="shoping_cart_img" />Cart</button
           >
 
           <button  id ="homepage-login-btn" class="login header" >Login</button>
@@ -227,7 +227,7 @@
 
     <div id="login-page">
       <header class="login-header">
-        <a href="" class="name"><img src="/logo.jpg" alt="U" class="logo">Cafanier</a>
+        <a href="" class="name"><img src="/img/logo.jpg" alt="U" class="logo">Cafanier</a>
 
         <nav class="login-navbar">
           <ul type="none">
@@ -252,13 +252,13 @@
         <div class="login-box-head">Login</div>
         <form action="">
           <div class="username">
-            <label for="username"> <img src="/acount-logo.png" alt="" class="account-logo logo"></label>
+            <label for="username"> <img src=".img/acount-logo.png" alt="" class="account-logo logo"></label>
             <input type="text" placeholder="Username" id="username">
           </div>
 
           <div class="password">
             <label for="password">
-            <img src="/password-logo.png" alt="" class="password-logo logo"></label>
+            <img src="/img/password-logo.png" alt="" class="password-logo logo"></label>
             <input type="password" placeholder="Password" id="password">
             </div>
 
