--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
         <div class="login-box-head">Login</div>
         <form action="">
           <div class="username">
-            <label for="username"> <img src=".img/acount-logo.png" alt="" class="account-logo logo"></label>
+            <label for="username"> <img src="/img/" alt="" class="account-logo logo"></label>
             <input type="text" placeholder="Username" id="username">
           </div>
 
