new working model

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
               <div class="price">₹<span class="price-num">55000.00</span></div>
             </a>
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
             <button class="btn-buy">Buy now</button>
           </div>
@@ -84,7 +84,7 @@
               <div class="price">₹<span class="price-num">499.00</span></div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
 
             <button class="btn-buy">Buy now</button>
@@ -104,7 +104,7 @@
               </div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
 
             <button class="btn-buy">Buy now</button>
@@ -123,7 +123,7 @@
               </div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
             <button class="btn-buy">Buy now</button>
           </div>
@@ -141,7 +141,7 @@
               </div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
             <button class="btn-buy">Buy now</button>
           </div>
@@ -163,7 +163,7 @@
               </div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
             <button class="btn-buy">Buy now</button>
           </div>
@@ -179,7 +179,7 @@
               </div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
             <button class="btn-buy">Buy now</button>
           </div>
@@ -197,7 +197,7 @@
               </div></a
             >
             <button class="product-cart">
-              <img src="/cart.png" id="shoping_cart_img" />
+              <img src="/img/cart.png" id="shoping_cart_img" />
             </button>
             <button class="btn-buy">Buy now</button>
           </div>
@@ -209,10 +209,10 @@
     </div>
     <!-- homepage div-->
 
-    <div id="cartpage">
+    <div id="cartpage"class = "hidden">
       <header class="cartpage-header">
         <a href="" class="name"
-          ><img src="/logo.jpg" alt="U" class="logo" />Cafanier</a
+          ><img src="/img/logo.jpg" alt="U" class="logo" />Cafanier</a
         >
 
         <button class="login">Login</button>
@@ -243,7 +243,7 @@
     </div>
     <!-- Cartpage div-->
 
-    <div id="login-page">
+    <div id="login-page" class = "hidden">
       <header class="login-header">
         <a href="" class="name"
           ><img src="/img/logo.jpg" alt="U" class="logo" />Cafanier</a
