login and cart btn background

--- a/index.html
+++ b/index.html
@@ -33,16 +33,11 @@
             ><img src="/img/logo.jpg" alt="U" class="logo" />Cafanier</a
           >
 
-          <button
-            id="cartpage-btn"
-            class="cart header"
-            data-toggle="modal"
-            data-target="#cartpage"
-          >
+          <button id="cartpage-btn" class="cart">
             <img src="/img/cart.png" id="shoping_cart_img" />Cart
           </button>
 
-          <button id="homepage-login-btn" class="login header">Login</button>
+          <button id="homepage-login-btn" class="login">Login</button>
 
           <nav class="navbar">
             <ul type="none">
@@ -209,7 +204,7 @@
     </div>
     <!-- homepage div-->
 
-    <div id="cartpage"class = "hidden">
+    <div id="cartpage" class="hidden">
       <header class="cartpage-header">
         <a href="" class="name"
           ><img src="/img/logo.jpg" alt="U" class="logo" />Cafanier</a
@@ -228,6 +223,7 @@
           </ul>
         </div>
         <!--cart-items div -->
+
         <div class="hr"></div>
         <div class="cart-total-bar">
           <div class="cart-total">TOTAL</div>
@@ -243,7 +239,7 @@
     </div>
     <!-- Cartpage div-->
 
-    <div id="login-page" class = "hidden">
+    <div id="login-page" class="hidden">
       <header class="login-header">
         <a href="" class="name"
           ><img src="/img/logo.jpg" alt="U" class="logo" />Cafanier</a
