--- a/index.html
+++ b/index.html
@@ -12,15 +12,7 @@
     />
     <link rel="stylesheet" href="/style.css" />
     <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+Bhai+2&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Zen+Dots&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Ubuntu+Mono&family=Zen+Dots&family=Baloo+Bhai+2&display=swap"
       rel="stylesheet"
     />
     <title>UCafanier</title>
@@ -41,19 +33,19 @@
 
           <nav class="navbar">
             <ul type="none">
-              <li><a href="">Home</a></li>
-              <li><a href="">Sell</a></li>
-              <li><a href="">About</a></li>
-              <li><a href="">Contact Us</a></li>
+              <li><button class ='home'>Home</button></li>
+            <li><button class = "sell">Sell</button></li>
+            <li><button class="about" >About</button></li>
+            <li><button class="contact-us">Contact Us</button></li>
             </ul>
           </nav>
         </header>
 
-        <article></article>
+        
         <div id="products">
           <div class="product">
             <a href="">
-              <img src="/canon.jpg" alt="" class="product-img" />
+              <img src="/img/canon.jpg" alt="" class="product-img" />
               <div class="product-name">
                 Canon EOS 1500D 24.1 Digital SLR Camera (Black) with EF S18-55
                 is II Lens
@@ -70,7 +62,7 @@
 
           <div class="product">
             <a href=""
-              ><img src="/Mask.jpg" alt="" class="product-img" />
+              ><img src="/img/Mask.jpg" alt="" class="product-img" />
               <div class="product-name">
                 OxiClear N99 Anti Pollution Face Mask with 4 Activated Carbon
                 Filters & Detachable
@@ -88,7 +80,7 @@
 
           <div class="product">
             <a href=""
-              ><img src="/laptop.jpg" alt="" class="product-img" />
+              ><img src="/img/laptop.jpg" alt="" class="product-img" />
               <div class="product-name">
                 17-inch FHD Gaming Laptop (Intel Core i7-7820HK/ 32GB/1TB HDD +
                 1TB SSD
@@ -108,7 +100,7 @@
 
           <div class="product">
             <a href=""
-              ><img src="/Apple.jpg" alt="" class="product-img" />
+              ><img src="/img/Apple.jpg" alt="" class="product-img" />
               <div class="product-name">
                 Apple MacBook Pro (13-inch, 8GB RAM, 256GB SSD, 1.4GHz Quad-core
               </div>
@@ -126,7 +118,7 @@
 
           <div class="product">
             <a
-              ><img src="/AC.jpg" alt="" class="product-img" />
+              ><img src="/img/AC.jpg" alt="" class="product-img" />
               <div class="product-name">
                 Voltas 1.5 Ton 3 Star Inverter Split AC
               </div>
@@ -145,7 +137,7 @@
           <div class="product">
             <a href=""
               ><img
-                src="/611YswQRgfL._SL1400_.jpg"
+                src="/img/611YswQRgfL._SL1400_.jpg"
                 alt=""
                 class="product-img"
               />
@@ -166,7 +158,7 @@
 
           <div class="product">
             <a href=""
-              ><img src="/window Ac.jpg" alt="" class="product-img" />
+              ><img src="/img/window Ac.jpg" alt="" class="product-img" />
               <div class="product-name">Carrier 1.5 Ton 3 Star Window AC</div>
 
               <div class="price">
@@ -182,7 +174,7 @@
 
           <div class="product">
             <a href=""
-              ><img src="/Headphones.jpg" class="product-img" />
+              ><img src="/img/Headphones.jpg" class="product-img" />
               <div class="product-name">
                 Focal Listen Wireless Over-Ear Bluetooth Headphones
               </div>
@@ -247,10 +239,10 @@
 
         <nav class="login-navbar">
           <ul type="none">
-            <li><a href="">Home</a></li>
-            <li><a href="">Sell</a></li>
-            <li><a href="">About</a></li>
-            <li><a href="">Contact Us</a></li>
+            <li><button class ="home">Home</button></li>
+            <li><button class = "sell" >Sell</button></li>
+            <li><button class="about">About</button></li>
+            <li><button class="contact-us">Contact Us</button></li>
           </ul>
         </nav>
       </header>
@@ -294,6 +286,61 @@
     </div>
     <!-- login-page div-->
 
+    <div id="about-us-page" class="modal hidden">
+      <h1>About Us</h1>
+      <button class="close-btn">x</button>
+      <hr />
+      <p class="about-content">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo
+        eligendi labore culpa iste dicta sequi impedit voluptatem inventore.
+        Dolores, ratione! Tempora rem, id blanditiis atque consequatur modi,
+        dicta numquam vel optio quia doloribus harum ducimus quos deleniti
+        distinctio nostrum adipisci accusamus. Omnis autem ex earum, suscipit
+        voluptatum eveniet accusantium mollitia fugit perspiciatis repellendus
+        accusamus animi eos beatae esse deserunt obcaecati, perferendis qui
+        dolores eius. Praesentium sunt accusamus culpa iusto. Nobis veritatis
+        temporibus error consectetur debitis ipsa alias molestiae, itaque et
+        ullam exercitationem quos, harum eius dolor eveniet magnam dolore nihil
+        accusantium rerum quam enim ex. Vero tenetur dicta cum delectus tempora
+        ratione molestias et dolor eligendi, autem non itaque officia eius
+        aspernatur vitae quae optio iusto odit inventore sint deleniti?
+        Assumenda tenetur nesciunt quasi ullam, dicta at placeat, minus corporis
+        facilis dignissimos voluptatum veniam. Natus placeat officiis ex!
+        Voluptatem eius incidunt iusto vitae fugit possimus beatae! Impedit
+        reiciendis hic nam!
+      </p>
+    </div>
+    <div id="contact-us-page" class="modal hidden">
+      <h1>Contact Us</h1>
+      <button class="close-btn">x</button>
+      <p>Want to get in touch ? we'd love to hear from you</p>
+      <section class="customer-care">
+        <div class="box">
+          <img src="/img/phone.png" />
+          <p class="main">Get a call From us</p>
+          <p class="sub">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit.
+          </p>
+        </div>
+        <div class="box">
+          <img src="/img/email.png" />
+          <p class="main">Write us your query</p>
+          <p class="sub">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Ipsum
+            fugiat p
+          </p>
+        </div>
+      </section>
+
+      <section class="social-media">
+        <img src="/img/twitter.jpg" alt="" />
+        <img src="/img/facebook.jpg" alt="" />
+        <img src="/img/email.jpg" alt="" />
+        <img src="/img/instagram.jpg" alt="" />
+      </section>
+    </div>
+
+    <div class="overlay hidden"></div>
     <script src="/script.js"></script>
   </body>
 </html>
